--- a/app/src/main/res/layout/alert_dialog_waiting.xml
+++ b/app/src/main/res/layout/alert_dialog_waiting.xml
@@ -4,7 +4,8 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:background="@drawable/main_background"
+        android:background="@drawable/button_background"
+        android:foreground="#00FFFFFF"
         android:layout_height="wrap_content"
         android:padding="10dp">
 
